--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "ember try:each"
   },
   "dependencies": {
+    "broccoli-stew": "^1.5.0",
     "ember-cli-babel": "^6.6.0"
   },
   "devDependencies": {
